# secured_rag_pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  Dockerfile.hf  README.hf.md  pyproject.toml
backend/app/: chat_store.py  config.py  db.py  main.py  models.py  schemas.py
backend/app/api/: deps.py
backend/app/api/routes/: admin.py  auth.py  chat.py  connectors.py  conversations.py  documents.py
backend/app/audit/: logger.py
backend/app/connectors/: __init__.py  base.py  composio_connector.py
backend/app/embeddings/: __init__.py  base.py  fastembed_provider.py  openai_provider.py
backend/app/ingestion/: chunker.py  extractor.py  pipeline.py
backend/app/llm/: __init__.py  anthropic_provider.py  base.py  echo_provider.py  openai_provider.py
backend/app/prompts/: templates.py
backend/app/retrieval/: pipeline.py
backend/app/security/: auth.py  pii.py  prompt_guard.py  rbac.py
backend/app/vector/: qdrant_store.py
backend/scripts/: composio_probe.py
frontend/: UI_PLAN.md  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/ask/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/components/: AppShell.tsx  AskStore.tsx  DatePicker.tsx  Markdown.tsx  Menu.tsx  Select.tsx  Toast.tsx  Topbar.tsx  icons.tsx  theme.tsx  ui.tsx
frontend/app/connectors/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/lib/: api.ts  roles.ts  time.ts
(+8 files in other folders)
