[project]
name = "secured-rag-backend"
version = "0.1.0"
description = "Secured Enterprise RAG platform — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "email-validator==2.2.0",
    "sqlalchemy==2.0.36",
    "psycopg2-binary==2.9.10",
    "python-jose[cryptography]==3.3.0",
    "bcrypt==5.0.0",
    "python-multipart==0.0.12",
    "qdrant-client==1.12.1",
    "fastembed==0.4.2",
    "httpx==0.28.1",
    "composio>=0.10.10",
    "pypdf>=6.12.2",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.5",
]

[tool.uv]
# This is an application (code lives in ./app), not an installable library,
# so uv should not try to build/install the project itself.
package = false
